# kernel

./: .clang-format  CMakeLists.txt  linker.ld
bwio/: CMakeLists.txt  bwio.c
include/: bwio.h  common_defs.h  sys_call.h  sys_call_params.h
kernel/: CMakeLists.txt  kernel.c  kernel_loop.s  message_ring_buffer.h  messager.c  messager.h  messager_impl.h  scheduler.c  scheduler.h  scheduler_ring_buffer.c  scheduler_ring_buffer.h  sys_call.c  sys_call_handler.c  sys_call_handler.h  task_table.c  task_table.h
lib/: CMakeLists.txt  bwio.c
src/: CMakeLists.txt  entry.c
toolchain/gnuarm-4.0.2/arm-elf/lib/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/fpu/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/fpu/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/fpu/nofmult/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/be/nofmult/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/fpu/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/fpu/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/fpu/nofmult/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/ldscripts/: armelf.x  armelf.xbn  armelf.xc  armelf.xn  armelf.xs  armelf.xsc  armelf.xsw  armelf.xw
toolchain/gnuarm-4.0.2/arm-elf/lib/nofmult/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/thumb/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/thumb/be/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/thumb/be/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/arm-elf/lib/thumb/interwork/: libstdc++.la  libsupc++.la
toolchain/gnuarm-4.0.2/info/: gdb.info  gdbint.info  stabs.info
toolchain/gnuarm-4.0.2/lib/: tclConfig.sh  tkConfig.sh
